--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Portal One Piece</h1>
     <nav>
       <a href="">Inicío</a>
-      <a href="">Personagens</a>
+      <a href="personagens.html">Personagens</a>
       <a href="">Frutas</a>
       <a href="">Bandos</a>
       <a href="">Contato</a>
